[tool.poetry]
name = "proton-client"
version = "0.7.1"
description = "Python Proton client module"
authors = ["Proton Technologies <contact@protonmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "proton"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
bcrypt = "^4.0.1"
python-gnupg = "^0.5.0"
pyOpenSSL = "^22.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
